Attempt to implement new websockets library.
- Added websocket library to project config
- Added library for SSL management with `.pem` files
- Modified `Server` class to be used with the new library
- Changes to `ClientHandler` class
- Created `WebSocketInputStream` and `WebSocketOutputStream` which are
  used in the client handler as normal I/O streams, and act as wrappers
  to the actual websocket maintaining the connection to the client.
- Created `WebSocketHandler` which implements the new websockets
  library as a `wss` protocol websocket server.